--- a/patron/index.html
+++ b/patron/index.html
@@ -143,7 +143,7 @@
       <!-- <div class="clear" id="scene-two">
 
         <div>
-          <p class="color-two">Scene two official selections.<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections officielles avec sc&egrave;ne deux.</font></p>
+          <p><font class="color-two">Scene two official selections.<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections officielles avec sc&egrave;ne deux.</font></font></p>
 
         </div>
 
