--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -88,7 +88,7 @@
 
         <p class="linebreak" id="steve-boyes-toggle">Hypothesis: <a class="color" onclick="toggle_steve_boyes();">Termites and mushrooms</a>.</p>
 
-        <div class="clear indent-left-line" id="steve-boyes">
+        <div class="clear line-left" id="steve-boyes">
           <p class="linebreak"><font class="color"><i>Termites and mushrooms are the mechanics of the Okavango delta.</i></font></p>
 
           <p class="linebreak"><i>Termites have constructed millions of porous sand tunnels that fill with water when the delta floods, helping to expand, distribute and absorb the water. The termite mounds themselves also become islands, where sediments and nutrients collect, allowing the area to become a web of waterways, food, and shelter.</i> &mdash;&nbsp;<i>Guardians of the River</i> (2021)</p>
@@ -213,7 +213,7 @@
 
         <p class="linebreak" id="moremi-toggle">History: <a class="color" onclick="toggle_moremi();">Moremi Reserve</a>.</p>
 
-        <div class="clear indent-left-line" id="moremi">
+        <div class="clear line-left" id="moremi">
           <p class="linebreak"><font class="color"><i>A reserve in the Okavango delta.</i></font></p>
 
           <p class="linebreak"><i>Botswana became a British protectorate in 1885. A protectorate establishes its own local government, so for the newly formed culture of Botswana (Bechuanaland), this was made up of a council of eight tribes, with eight territories. A number of minority tribes were not recognized, most were absorbed into the eight. Botswana and Angola later became independent, however the circumstances were very different. This history is retold in part by Kerllen in <i>Guardians of the River</i>, &ldquo;Angola still needed to figure out a new government system, and barely had time to make sense of it before tumbling into civil war.&rdquo; Kerllen turns to the other side of the border, &ldquo;Botswana had no land mines, no battles for ivory.&rdquo;</i></p>
