--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -55,7 +55,7 @@
 
         <p class="linebreak" id="colin-bell-a">History: <a class="color" onclick="toggle_colin_bell();">Making a safe haven</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="Bell and Pinnock, 2019">2</a>]</sup></p>
 
-        <div class="clear indent-left-line" id="colin-bell">
+        <div class="clear line-left" id="colin-bell">
           <p class="linebreak"><font class="color"><i>In his chapter, &lsquo;Making a safe haven&rsquo;, in a book that he co-authored with Don Pinnock, <i>The Last Elephants</i> (2019), Colin Bell tells a history of elephants in Botswana.</i></font></p>
 
           <div>
@@ -170,7 +170,7 @@
 
         <p id="don-pinnock-a">History: <a class="color" onclick="toggle_don_pinnock();">Postscript</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="Bell and Pinnock, 2019">2</a>]</sup></p>
 
-        <div class="clear indent-left-line" id="don-pinnock">
+        <div class="clear line-left" id="don-pinnock">
           <p><font class="color"><i>Don Pinnock added a postscript to that chapter on Botswana.</i></font></p>
 
           <div>
