--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -94,7 +94,7 @@
 
         <p class="linebreak lineend" id="nairobi-1989-toggle">History: <a class="color overscore" onclick="toggle_nairobi_1989();">1989 Ivory Burn, Nairobi</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Footnotes">3,4</a>]</sup></p>
 
-        <div class="clear indent-left-line" id="nairobi-1989">
+        <div class="clear line-left" id="nairobi-1989">
           <p class="linebreak"><font class="color"><i>Poaching elephants for their ivory tusks turned rampant across Africa in the 1970s and only abated as African elephants were uplisted to Appendix I of the Convention on International Trade in Endangered Species (CITES), following the headlines of an ivory burn in Nairobi National Park in 1989.</i></font> <i>At that ivory burn, then President of Kenya&mdash;Daniel arap Moi was ahead of his time when he delivered this message to a global audience: &ldquo;To stop the poacher, the trader must also be stopped. And to stop the trader, the final buyer must be convinced not to buy ivory. I appeal to people all over the world to stop buying ivory.&rdquo;</i></p>
 
           <div>
