--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -249,7 +249,7 @@
 
         <p class="linebreak" id="loophole-a">History: <a class="color" onclick="toggle_loophole();">The &lsquo;legal&rsquo; ivory loophole</a>.<sup>&nbsp;[<a class="button" onclick="fn();" title="Christy, 2012">1</a>]</sup></p>
 
-        <div class="clear indent-left-line" id="loophole">
+        <div class="clear line-left" id="loophole">
           <p class="linebreak"><i><font class="color">The &lsquo;pre-ban&rsquo; ivory loophole is where this history of the &lsquo;legal&rsquo; ivory loopholes begins.</font> African elephant ivory imported into a nation-state, before 1989, remained part of a viable domestic trade. Since no inventory was made of global ivory stockpiles before the ban, and since ivory can weather time, for all intents and purposes, forever, any trader caught with ivory tusks brazenly invoked the timeless defense: this is &lsquo;pre-ban&rsquo; ivory.</i></p>
 
           <div>
