--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -54,7 +54,7 @@
     <a onclick="toggle_preview();" class="text-center">
       <section class="single">
         <div class="quote">
-          <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="trim" src="../../inc/img/boutique/01/white-elephant.2023.cover.preview.1280.jpg" />
+          <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="matte" src="../../inc/img/boutique/01/white-elephant.2023.cover.preview.1280.jpg" />
           <p class="text-right gutter-side "><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, 2024)</p>
 
         </div>
