--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -45,7 +45,7 @@
   <header>
     <div class="quote text-center">
       <h1 class="title">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></h1>
-      <h3 class="color-two">Scene two:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux&nbsp;:</font></h3>
+      <h3>Scene two:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace-sp"> </font><font class="thin">Tiger</font></a></h1>
       <h3><font class="clear">Oil painting of an Amur tiger in the taiga.</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l’huile d’un tigre de Sib&eacute;rie dans la ta&iuml;ga.</font></h3>
     </div>
@@ -80,7 +80,7 @@
     <section class="product single" id="scene">
 
       <div>
-        <h5 class="color-two"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
+        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
         <div class="clear" id="p-meta">
           <p class="small">Painted with Gamblin artists colors on linen canvas. Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Peint avec des couleurs d'artistes Gamblin sur toile de lin. Cr&eacute;&eacute; au Canada.</font></p>
           <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
