--- a/scene/two/the-beginning-of-chapter-two/index.html
+++ b/scene/two/the-beginning-of-chapter-two/index.html
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2021</h4>
-        <h2 class="color-two">The Beginning of Chapter Two</h2>
+        <h2 class="color">The Beginning of Chapter Two</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
         <p class="linebreak"><i>The triptych with Pure Red Color, Pure Yellow Color and Pure Blue Color painted by Aleksandr Rodchenko was shown at exhibition in Moscow in September 1921. This was a final, neutral statement on the subject of painting: three monochrome canvases painted without representation. The exhibition was titled 5&times;5&equals;25, and was produced by five Russian Avant-garde artists as a conclusion to the bourgeois practice of painting. For Rodchenko and for the other four artists with like variations on a monochrome canvas, this exhibition marked the end of painting and the beginning of a new chapter&mdash;a search for more constructive forms of art. For example, Rodchenko then turned to graphic art and photography in his commentary on the Soviet regime. For many modern critics, that exhibition in 1921 marked a shift in the history of art, and this marked departure from painting had an indirect influence on Abstract Expressionism in the 1940s and into the 1950s and so on.</i></p>
