--- a/scene/two/history-of-the-forest-and-the-trees/index.html
+++ b/scene/two/history-of-the-forest-and-the-trees/index.html
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">June 2022</h4>
-        <h2 class="color-two">The Forest Behind the Trees</h2>
+        <h2 class="color">The Forest Behind the Trees</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
         <p class="linebreak"><i>A Naturalist painting shares a new perspective. A unique perspective. Something that has not been seen before. A Naturalist painting does not just show another moose or yellow-bellied sapsucker&hellip; Another Amur tiger&hellip; Another North-Atlantic right whale. A Naturalist painting makes a statement of enough value to be worth making&mdash;to be worth the time that will be required to put paint on canvas and into perspective. There is a sense of environment or setting or space. The forest. The pines. And the air billowing between the trees.</i></p>
