--- a/scene/two/the-beginning-of-exhibition/index.html
+++ b/scene/two/the-beginning-of-exhibition/index.html
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2023</h4>
-        <h2 class="color-two">Exhibition of Art</h2>
+        <h2 class="color">Exhibition of Art</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
       </div>
