--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2020</h4>
-        <h2 class="color-two">The End of Painting</h2>
+        <h2 class="color">The End of Painting</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
         <p class="linebreak"><i>Enter scene two. Soviet state, 1920. Open with two of the most prolific artists at the time &mdash; partners in business and in marriage Aleksandr Rodchenko and Varvara Stepanova.</i></p>
