--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -52,13 +52,16 @@
   </header>
 
   <!-- <div class="clear preview" id="preview">
-    <a onclick="toggle_preview();" class="text-center">
+    <a onclick="toggle_preview();">
       <section class="single">
-        <div class="quote">
-          <img alt="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. White Tiger oil painting. &ndash;&nbsp;peinture &agrave; l'huile." class="trim" src="../../inc/img/boutique/02/white-tiger.2020.study.blur.720-360.jpg" />
-          <p class="text-right gutter-side"><i>White Tiger</i> &ndash; Taiga, Siberia<font class="fr">&nbsp;&#92;&nbsp;Sib&eacute;rie</font> (oil painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font>, 2025)</p>
+        <div class="text-center">
+          <div>
+            <img alt="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. White Tiger oil painting. &ndash;&nbsp;peinture &agrave; l'huile." class="trim" src="../../inc/img/boutique/02/white-tiger.2020.study.blur.720-360.jpg" />
 
+          </div>
+          <p><i>White Tiger</i> &ndash; Taiga, Siberia<font class="fr">&nbsp;&#92;&nbsp;Sib&eacute;rie</font> (oil painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font>, 2025)</p>
         </div>
+
       </section>
     </a>
   </div> -->
