--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -51,13 +51,16 @@
   </header>
 
   <div class="clear preview" id="preview">
-    <a onclick="toggle_preview();" class="text-center">
+    <a onclick="toggle_preview();">
       <section class="single">
-        <div class="quote">
-          <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="matte" src="../../inc/img/boutique/01/white-elephant.2023.cover.preview.1280.jpg" />
-          <p class="text-right gutter-side "><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, 2024)</p>
+        <div class="text-center">
+          <div>
+            <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="matte" src="../../inc/img/boutique/01/white-elephant.2023.cover.preview.1280.jpg" />
 
+          </div>
+          <p><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, 2024)</p>
         </div>
+
       </section>
     </a>
   </div>
