--- a/boutique/index.html
+++ b/boutique/index.html
@@ -31,16 +31,16 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active dark"><a><i>Boutique</i></a></li>
-      <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb active"><a><i>Boutique</i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <!--li class="right thin"><a class="item-count" href="https://animathabitat.org/cart/" title="Animat Habitat cart&nbsp;&#92;&nbsp;panier">Cart<font class="fr">&nbsp;&#92;&nbsp;Panier</font></a></li-->
     </ul>
   </nav>
 
   <header>
     <div class="quote text-center">
-      <h1 class="title"><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></h1>
+      <h1 class="title"><font class="clear">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
       <h3>
         <a href="medium/digital-numerique/" title="Animat Habitat boutique. Digital editions. &ndash;&nbsp;&Eacute;ditions num&eacute;riques."><font class="overscore">Digital Editions</font></a><font class="fr">&nbsp;&#92;&nbsp;num&eacute;riques</font>
          &middot; <a href="medium/giclee/" title="Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es."><font class="overscore">Gicl&eacute;e Prints</font></a><font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font>
