--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -24,16 +24,16 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb dark logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb dark"><a href="../../" title="Animat Habitat boutique.">Boutique</a></li>
-      <li class="crumb active dark"><a><i>Gicl&eacute;e</i></a></li>
-      <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb"><a href="../../" title="Animat Habitat boutique.">Boutique</a></li>
+      <li class="crumb active"><a><i>Gicl&eacute;e</i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
 
   <header>
     <div class="quote text-center">
-      <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></a></h1>
+      <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="clear">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></a></h1>
       <h3>Gicl&eacute;e Prints<font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font></h3>
 
     </div>
