--- a/c/index.html
+++ b/c/index.html
@@ -30,8 +30,8 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb dark logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active dark"><a><i>Terms</i></a></li>
+      <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb active"><a><i>Terms</i></a></li>
     </ul>
   </nav>
 
