--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
 
   <nav>
     <ul class="home">
-      <li class="crumb dark logo"><a title="Animat Habitat"><img src="inc/svg/animat.mark.1.1.1200.dark.svg" class="logo" alt="Animat Mark (Dark) &copy; Animat Habitat, 2015" /></a></li>
+      <li class="crumb logo"><a title="Animat Habitat"><img src="inc/svg/animat.mark.1.1.1200.dark.svg" class="logo" alt="Animat Mark (Dark) &copy; Animat Habitat, 2015" /></a></li>
       <li class="crumb btn color-one"><a href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <!-- <li class="crumb btn scene-two"><a href="scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li> -->
-      <!-- <li class="crumb btn scene-three"><a href="scene/three/" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">III</a></li> -->
-      <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="right btn dark"><a href="patron/" title="Animat Habitat patronage.">Patron</a></li>
-      <li class="right btn dark"><a href="boutique/" title="Animat Habitat boutique.">Boutique</a></li>
+      <!-- <li class="crumb btn color-two"><a href="scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li> -->
+      <!-- <li class="crumb btn color-three"><a href="scene/three/" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">III</a></li> -->
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right btn"><a href="patron/" title="Animat Habitat patronage.">Patron</a></li>
+      <li class="right btn"><a href="boutique/" title="Animat Habitat boutique.">Boutique</a></li>
     </ul>
   </nav>
 
   <header>
     <div class="quote text-center">
-      <h1 class="title"><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></h1>
+      <h1 class="title"><font class="clear">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
       <h3>Art for the conservation of endangered species and their natural habitats.<font class="fr"> <br>Art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels.</font></h3>
 
     </div>
@@ -65,7 +65,7 @@
       <div class="clear diptych">
 
         <div>
-          <a class="nav-block" href="url/git/bigtuskers/" target="_blank" title="Last of the Big Tuskers (2018)">
+          <a class="project-thumbnail" href="url/git/bigtuskers/" target="_blank" title="Last of the Big Tuskers (2018)">
             <img src="inc/img/last-of-the-big-tuskers/lotbt.poster.art.480-233.jpg" width="480" height="233" alt="Last of the Big Tuskers (documentary film, 2018) poster art." />
             <div class="bg-one">
               <h3><font class="color-one">Last of the Big Tuskers (2018)</font></h3>
@@ -77,7 +77,7 @@
         </div>
 
         <div>
-          <a class="nav-block" href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">
+          <a class="project-thumbnail" href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">
             <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;&nbsp;art de couverture." />
             <div class="bg-one">
               <h3><font class="color-one">I&nbsp; White Elephant (2024)</font></h3>
