--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -32,8 +32,8 @@
     <ul class="page">
       <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
       <li class="crumb scene color"><a><i>White Elephant</i></a></li>
-      <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="right thin dark" id="currency"><a class="title" onclick="toggle_currency();" title="Animat Habitat in Canada, United States of America.">
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();" title="Animat Habitat in Canada, United States of America.">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
         <font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>
         &nbsp;<font class="currency-symbol">&#36;</font>
@@ -43,9 +43,9 @@
 
   <header>
     <div class="quote text-center">
-      <h1 class="title">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></h1>
+      <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
       <h3>Scene one:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un&nbsp;:</font></h3>
-      <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace-sp"> </font><font class="thin">Elephant</font></a></h1>
+      <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Elephant</font></a></h1>
       <h3><font class="clear">Comic book and companion app to change the way we look at wildlife.<font class="fr"><br>Une bande dessin&eacute;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature.</font></font></h3>
     </div>
   </header>
@@ -54,11 +54,8 @@
     <a onclick="toggle_preview();">
       <section class="single">
         <div class="text-center">
-          <div>
-            <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="matte" src="../../inc/img/boutique/01/white-elephant.2023.cover.preview.1280.jpg" />
-
-          </div>
-          <p><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, 2024)</p>
+          <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="matte-preview" src="../../inc/img/boutique/01/white-elephant.2023.cover.preview.1280.jpg" />
+          <p class="linebreak"><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, 2024)</p>
         </div>
 
       </section>
