--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -31,10 +31,10 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-two logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
-      <li class="crumb scene scene-two"><a><i>White Tiger</i></a></li>
-      <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="right thin dark" id="currency"><a class="title" onclick="toggle_currency();">
+      <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
+      <li class="crumb scene color"><a><i>White Tiger</i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
         <font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>
         &nbsp;<font class="currency-symbol">&#36;</font>
@@ -44,9 +44,9 @@
 
   <header>
     <div class="quote text-center">
-      <h1 class="title">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></h1>
+      <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
       <h3>Scene two:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux&nbsp;:</font></h3>
-      <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace-sp"> </font><font class="thin">Tiger</font></a></h1>
+      <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Tiger</font></a></h1>
       <h3><font class="clear">Oil painting of an Amur tiger in the taiga.</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l’huile d’un tigre de Sib&eacute;rie dans la ta&iuml;ga.</font></h3>
     </div>
   </header>
@@ -55,11 +55,8 @@
     <a onclick="toggle_preview();">
       <section class="single">
         <div class="text-center">
-          <div>
-            <img alt="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. White Tiger oil painting. &ndash;&nbsp;peinture &agrave; l'huile." class="trim" src="../../inc/img/boutique/02/white-tiger.2020.study.blur.720-360.jpg" />
-
-          </div>
-          <p><i>White Tiger</i> &ndash; Taiga, Siberia<font class="fr">&nbsp;&#92;&nbsp;Sib&eacute;rie</font> (oil painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font>, 2025)</p>
+          <img alt="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. White Tiger oil painting. &ndash;&nbsp;peinture &agrave; l'huile." class="matte-preview" src="../../inc/img/boutique/02/white-tiger.2020.study.blur.720-360.jpg" />
+          <p class="linebreak"><i>White Tiger</i> &ndash; Taiga, Siberia<font class="fr">&nbsp;&#92;&nbsp;Sib&eacute;rie</font> (oil painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font>, 2025)</p>
         </div>
 
       </section>
@@ -261,25 +258,25 @@
     <article>
       <div class="quote">
 
-        <!-- <h3><a href="history-of-rewilding/"><font class="color-two">History of Rewilding</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="history-of-rewilding/"><font class="color">History of Rewilding</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="the-beginning-of-printing/"><font class="color-two">The Beginning of Printing</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="the-beginning-of-printing/"><font class="color">The Beginning of Printing</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="the-beginning-of-exhibiting/"><font class="color-two">The Beginning of Exhibiting</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="the-beginning-of-exhibiting/"><font class="color">The Beginning of Exhibiting</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="history-of-the-forest-and-the-trees/"><font class="color-two">A History of the Forest and the Trees</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-the-forest-and-the-trees/"><font class="color">A History of the Forest and the Trees</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="tiger-conservation-siberia/"><font class="color-two">Tiger Conservation in Siberia</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="tiger-conservation-siberia/"><font class="color">Tiger Conservation in Siberia</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="the-beginning-of-chapter-two/"><font class="color-two">The Beginning of Chapter Two</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="the-beginning-of-chapter-two/"><font class="color">The Beginning of Chapter Two</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="the-beginning-of-painting/"><font class="color-two">The Beginning of Painting</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="the-beginning-of-painting/"><font class="color">The Beginning of Painting</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
