--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -30,9 +30,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb dark logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb btn dark"><a href="../" title="Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&eacute;ro.">&lt;</a></li>
-      <li class="crumb scene dark"><a><i>Northern White Rhinoceros</i></a></li>
+      <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb btn"><a href="../" title="Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&eacute;ro.">&lt;</a></li>
+      <li class="crumb scene"><a><i>Northern White Rhinoceros</i></a></li>
     </ul>
   </nav>
 
@@ -40,7 +40,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">December 2022</h4>
-        <h2 class="dark">Northern White Rhinoceros</h2>
+        <h2 class="color">Northern White Rhinoceros</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
         <p class="linebreak"><i>One of the more incomprehensible acts that we humans, as a species, have to face up to is the extirpation of a once thriving group of animals, such as the northern white rhinoceros. Once upon a time&hellip; there were thousands of this subspecies living across Africa. The crisis of poaching that has supplied an illegal trade in rhino horn has made the plight of the northern white rhinoceros particularly devastating. Now the next candidates for oblivion.</i></p>
