--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -31,17 +31,17 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb dark logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb scene dark"><a><i>White Rhino</i></a></li>
-      <li class="right thin dark"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
+      <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb scene"><a><i>White Rhino</i></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
 
   <header>
     <div class="quote text-center">
-      <h1 class="title">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></h1>
+      <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
       <h3>Scene zero:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne z&egrave;ro&nbsp;:</font></h3>
-      <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace-sp"> </font><font class="thin">Rhino</font></a></h1>
+      <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Rhino</font></a></h1>
       <h3><font class="clear">Oil painting of a red horizon.</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l’huile d’un horizon en flammes.</font></h3>
     </div>
   </header>
